--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahmedabad Institute Of Technology</title>
-    <link rel="stylesheet" href="/css/app.min.css">
+    <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
     
@@ -65,6 +65,6 @@
 
     <!-- <script src="https://unpkg.com/vue"></script> -->
     <script src="https://unpkg.com/vue@2.5.2/dist/vue.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
